<resources>
    <string name="app_name">Ontario Food Mart</string>
    <string name="items">Items</string>
    <string name="cart">Cart</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="welcomeTitle">Welcome to Ontario Food Mart</string>
    <string name="whoAreWe">Ontario Food Mart is an online food store created in 2022 whose goal is to help Canadians stay at home and still get food at a convenience and cost that only we can offer. Our service is a very easy to use interface that offers the best of online shopping and delivery. Order with Ontario Food Mart now!</string>
    <string name="whatWeDo">Ontario Food mart is a new company that delivers food right to your doorsteps.We import and monitor the produce in our warehouses daily. All produce needs to be approved and pass a health and safety test before being sent out, so all deliverable will be safe for our customers to consume. Ontario Food Mart is one of the most cost efficient grocery stores in Canada thanks to our Price Match Guarantee. Deliveries from Ontario Food Mart are usually between 1-2 hours, beating most of our competitors.</string>

<string-array name="delivery">
    <item>Express (1-2 Business Days) + $10</item>
    <item>Normal (3-5 Business Days) + $5.50</item>
    <item>Same Day + $13.95</item>
</string-array>
</resources>