<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/TopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/grey"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/items"
            android:layout_marginRight="10dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cart"
            android:layout_marginRight="10dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/signIn"
            android:layout_marginRight="10dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/signUp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:textAlignment="center"
        android:textSize="25dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Who Are We?"
        android:textStyle="italic"
        style="@style/TextAppearance.AppCompat.Headline"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whoAreWe"
        android:layout_margin="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="What Do We Do?"
        android:textStyle="italic"
        style="@style/TextAppearance.AppCompat.Headline"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whatWeDo"
        android:layout_margin="5dp"
        />

</LinearLayout>