<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".itemActivity"
    android:id="@+id/itemLayout">
    <LinearLayout
        android:id="@+id/TopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/grey"
        >
        <Button
            android:id="@+id/itemButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/items"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/itemlisticon"
            android:textSize="10dp"
            />
        <Button
            android:id="@+id/cartButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cart"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/cart"
            android:textSize="10dp"
            />
        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/signIn"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/person"
            android:textSize="10dp"
            />
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/outlineperson"
            android:text="@string/signUp"
            android:textSize="10dp"
            android:scaleType="fitXY"
            />
    </LinearLayout>
    <Button
        android:id="@+id/addToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add to Cart"
        android:drawableLeft="@drawable/add_cart"
        />
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:id="@+id/itemList"-->
<!--        android:orientation="vertical">-->

<!--    </LinearLayout>-->
</LinearLayout>