<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".checkout"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/TopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/grey">

        <Button
            android:id="@+id/itemButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/items"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/itemlisticon"
            android:textSize="10dp"
            />
        <Button
            android:id="@+id/cartButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cart"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/cart"
            android:textSize="10dp"
            />
        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/signIn"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/person"
            android:textSize="10dp"
            />
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/outlineperson"
            android:text="@string/signUp"
            android:textSize="10dp"
            android:scaleType="fitXY"
            />
    </LinearLayout>
<!--    End of Top Bar-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkoutUsername"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Credit Card"
            android:inputType="number"
            android:id="@+id/cardNumber"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardNumber"
            android:hint="Exp"
            android:inputType="number"
            android:id="@+id/exp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardNumber"
            android:layout_toRightOf="@+id/exp"
            android:inputType="number"
            android:id="@+id/CVV"
            android:hint="CVV"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Postal Code"
            android:inputType="textPostalAddress"
            android:id="@+id/postalCode"
            android:layout_below="@+id/exp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address"
            android:inputType="text"
            android:hint="Address"
            android:layout_toRightOf="@+id/postalCode"
            android:layout_below="@+id/exp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deliverySpinner"
            android:layout_below="@id/postalCode"/>


        <Button
            android:id="@+id/payButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="Checkout" />



    </RelativeLayout>




</LinearLayout>